--- a/CUG-client/index.html
+++ b/CUG-client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./public/favicon.ico">
+    <link rel="stylesheet" href="./favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CUG ECoR</title>
   </head>
